--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
             <img class="tape" src="./images/tape.png" alt="Картинка: Включите музыку" loading="lazy" />
             <img class="books" src="./images/books.png" alt="Картинка: Читайте" loading="lazy" />
             <img class="street" src="./images/street.png" alt="Картинка: Прогуляйтесь" loading="lazy" />
+          </article>
         </li>
       </ul>
     </section>
