--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </li>
       </ul>
     </nav>
-    <h1 class="header-title shadow">no focus</h1>
+    <h1 class="bigger-title shadow">no focus</h1>
     <p class="header-introduction title-answer">
       Что делать, когда не можешь делать ничего<br />
       Или почему нам так сложно сконцентрироваться, особенно когда очень надо
@@ -89,157 +89,140 @@
     </section>
     <section class="section what">
       <h2 class="title-question">Что снижает концентрацию внимания?</h2>
-      <ul class="answer-list">
-        <li>
-          <article class="answer">
-            <h3 class="title-answer">Многозадачность</h3>
-            <p>
-              Как концентрация может снижаться из-за… концентрации? Любая
-              стрессовая ситуация (и резко меняющийся мир в целом) заставляет
-              наш мозг постоянно «сканировать» окружающую среду на предмет
-              опасности. Например, читать новости вместо работы. Но быть
-              собранными всё время — невозможно. Концентрация — мышца, и она
-              может не выдержать, если не давать ей отдохнуть.
-            </p>
-          </article>
-        </li>
-        <li>
-          <article class="answer">
-            <h3 class="title-answer">Еда</h3>
-            <p>
-              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
-              доставляют в мозг энергию и помогают ему лучше работать. Но
-              уходит эта энергия также быстро, как и приходит. А мы в
-              результате попадаем на «углеводные качели»: как только действие
-              «быстрых углеводов» заканчивается, мы чувствуем усталость и
-              сонливость. И хотим ещё больше быстрых углеводов.
-            </p>
-          </article>
-        </li>
-        <li>
-          <article class="answer">
-            <h3 class="title-answer">Гаджеты</h3>
-            <p>
-              Да-да, это та самая ситуация, когда на экране ноутбука — код, в
-              наушниках — подкаст, а на компьютере фоном — ещё и видео с
-              забавными утятами. В результате мозг пытается переключиться с
-              одной задачи на другую — и просто не может. А чтобы вернуться к
-              состоянию полной концентрации, человеку в среднем нужно 20
-              минут. Вот и получается, что чем больше времени мы проводим в
-              гаджетах, тем больше времени затем нужно, чтобы вернуться к
-              работе.
-            </p>
-          </article>
-        </li>
-      </ul>
+      <div class="answer-list">
+        <article class="answer">
+          <h3 class="title-answer">Многозадачность</h3>
+          <p>
+            Как концентрация может снижаться из-за… концентрации? Любая
+            стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+            наш мозг постоянно «сканировать» окружающую среду на предмет
+            опасности. Например, читать новости вместо работы. Но быть
+            собранными всё время — невозможно. Концентрация — мышца, и она
+            может не выдержать, если не давать ей отдохнуть.
+          </p>
+        </article>
+        <article class="answer">
+          <h3 class="title-answer">Еда</h3>
+          <p>
+            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+            доставляют в мозг энергию и помогают ему лучше работать. Но
+            уходит эта энергия также быстро, как и приходит. А мы в
+            результате попадаем на «углеводные качели»: как только действие
+            «быстрых углеводов» заканчивается, мы чувствуем усталость и
+            сонливость. И хотим ещё больше быстрых углеводов.
+          </p>
+        </article>
+        <article class="answer">
+          <h3 class="title-answer">Гаджеты</h3>
+          <p>
+            Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+            наушниках — подкаст, а на компьютере фоном — ещё и видео с
+            забавными утятами. В результате мозг пытается переключиться с
+            одной задачи на другую — и просто не может. А чтобы вернуться к
+            состоянию полной концентрации, человеку в среднем нужно 20
+            минут. Вот и получается, что чем больше времени мы проводим в
+            гаджетах, тем больше времени затем нужно, чтобы вернуться к
+            работе.
+          </p>
+        </article>
+      </div>
     </section>
     <section class="section how">
       <h2 class="title-question">
         Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
         секунд)
       </h2>
-
-      <ul class="answer-list">
-        <li>
-          <article class="answer">
-            <h3 class="title-answer">
-              5 простых (на самом деле не очень) советов
-            </h3>
-          </article>
-        </li>
-        <li>
-          <article class="answer">
-            <h3 class="title-answer">Представьте небо и облака</h3>
-            <p>
-              Или листья в ручье. Тут дело в лёгкой медитации, которая
-              помогает успокоиться. Ведь часто именно тревожные мысли о
-              сложных задачах как раз и мешают эти сложные задачи делать. В
-              такие моменты можно закрыть глаза и представить, что чистое
-              небо — это вы, а облака — тревожные мысли. И сколько бы их ни
-              было — ясное небо всегда будет где-то там, за тучами, и никуда
-              не денется. Это упражнение поможет вернуться в настоящий
-              момент, а не волноваться о потенциальных проблемах из
-              будущего.
-            </p>
-          </article>
-        </li>
-        <li>
-          <article class="answer">
-            <h3 class="title-answer">Включите музыку</h3>
-            <p>
-              Но не любую, и не любимую. Любимая может быть связана с
-              сильными положительными эмоциями, которые тоже очень сильно
-              отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная.
-              Можно вообще попробовать включить плейлист в «белым шумом» или
-              нейромузыкой.
-            </p>
-          </article>
-        </li>
-        <li>
-          <article class="answer">
-            <h3 class="title-answer">Прогуляйтесь</h3>
-            <p>
-              Или даже пробегитесь. Лучше найти парк или лес: один
-              эксперимент
-              <a class="link shadow-decor"
-                href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
-                target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время
-              как после просмотра городских пейзажей она наоборот
-              понижается. Можно совместить прогулку с физическими
-              упражнениями или бегом — так в мозг поступит ещё больше
-              кислорода и он будет лучше работать. Но и простая
-              двадцатиминутная прогулка — тоже отличный вариант.
-            </p>
-          </article>
-        </li>
-        <li>
-          <article class="answer">
-            <h3 class="title-answer">Хорошо ешьте</h3>
-            <p>
-              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
-              которые препятствуют резким скачкам сахара в крови. Например,
-              с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
-              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
-              пшеницы.
-            </p>
-          </article>
-        </li>
-        <li>
-          <article class="answer">
-            <h3 class="title-answer">Читайте</h3>
-            <p>
-              Настоящие бумажные книги. Это правда помогает с концентрацией:
-              чтобы прочитать пост в соцсети, достаточно нескольких минут
-              или даже секунд. А вот интересная книга способна затянуть и на
-              несколько часов и круто тренирует направленное внимание.
-            </p>
-          </article>
-        </li>
-      </ul>
+      <div class="how">
+        <h3 class="title-answer">
+          5 простых (на самом деле не очень) советов
+        </h3>
+        <ul class="answer-list">
+          <li>
+            <article class="answer">
+              <h4 class="title-answer">Представьте небо и облака</h4>
+              <p>
+                Или листья в ручье. Тут дело в лёгкой медитации, которая
+                помогает успокоиться. Ведь часто именно тревожные мысли о
+                сложных задачах как раз и мешают эти сложные задачи делать. В
+                такие моменты можно закрыть глаза и представить, что чистое
+                небо — это вы, а облака — тревожные мысли. И сколько бы их ни
+                было — ясное небо всегда будет где-то там, за тучами, и никуда
+                не денется. Это упражнение поможет вернуться в настоящий
+                момент, а не волноваться о потенциальных проблемах из
+                будущего.
+              </p>
+            </article>
+          </li>
+          <li>
+            <article class="answer">
+              <h4 class="title-answer">Включите музыку</h4>
+              <p>
+                Но не любую, и не любимую. Любимая может быть связана с
+                сильными положительными эмоциями, которые тоже очень сильно
+                отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная.
+                Можно вообще попробовать включить плейлист в «белым шумом» или
+                нейромузыкой.
+              </p>
+            </article>
+          </li>
+          <li>
+            <article class="answer">
+              <h4 class="title-answer">Прогуляйтесь</h4>
+              <p>
+                Или даже пробегитесь. Лучше найти парк или лес: один
+                эксперимент
+                <a class="link shadow-decor"
+                  href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                  target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время
+                как после просмотра городских пейзажей она наоборот
+                понижается. Можно совместить прогулку с физическими
+                упражнениями или бегом — так в мозг поступит ещё больше
+                кислорода и он будет лучше работать. Но и простая
+                двадцатиминутная прогулка — тоже отличный вариант.
+              </p>
+            </article>
+          </li>
+          <li>
+            <article class="answer">
+              <h4 class="title-answer">Хорошо ешьте</h4>
+              <p>
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+                которые препятствуют резким скачкам сахара в крови. Например,
+                с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+                чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+                пшеницы.
+              </p>
+            </article>
+          </li>
+          <li>
+            <article class="answer">
+              <h4 class="title-answer">Читайте</h4>
+              <p>
+                Настоящие бумажные книги. Это правда помогает с концентрацией:
+                чтобы прочитать пост в соцсети, достаточно нескольких минут
+                или даже секунд. А вот интересная книга способна затянуть и на
+                несколько часов и круто тренирует направленное внимание.
+              </p>
+            </article>
+          </li>
+        </ul>
+      </div>
     </section>
-    <section class="section picture">
-      <ul class="answer-list">
-        <li>
-          <article class="answer">
-            <h3 class="title-answer">
-              А можно в картинках?
-            </h3>
-          </article>
-        </li>
-        <li>
-          <article class="pictures">
-            <img class="sunset" src="./images/sunset.png" alt="Картинка: Представьте небо и облака" loading="lazy" />
-            <img class="icecream" src="./images/ice-cream.png" alt="Картинка: Хорошо ешьте" loading="lazy" />
-            <img class="tape" src="./images/tape.png" alt="Картинка: Включите музыку" loading="lazy" />
-            <img class="books" src="./images/books.png" alt="Картинка: Читайте" loading="lazy" />
-            <img class="street" src="./images/street.png" alt="Картинка: Прогуляйтесь" loading="lazy" />
-          </article>
-        </li>
-      </ul>
+    <section class="picture">
+      <h3 class="title-answer">
+        А можно в картинках?
+      </h3>
+      <article class="pictures">
+        <img class="sunset" src="./images/sunset.png" alt="Картинка: Представьте небо и облака" loading="lazy" />
+        <img class="icecream" src="./images/ice-cream.png" alt="Картинка: Хорошо ешьте" loading="lazy" />
+        <img class="tape" src="./images/tape.png" alt="Картинка: Включите музыку" loading="lazy" />
+        <img class="books" src="./images/books.png" alt="Картинка: Читайте" loading="lazy" />
+        <img class="street" src="./images/street.png" alt="Картинка: Прогуляйтесь" loading="lazy" />
+      </article>
     </section>
   </main>
   <footer class="footer decorated-zone">
-    <h2 class="header-title shadow">focus</h2>
+    <h2 class="bigger-title shadow">focus</h2>
   </footer>
   <script src="./scripts/script.js"></script>
 </body>
